--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -531,3 +531,8 @@
   display: flex
   justify-content: center
   align-items: center               
+
+.pf 
+  display: flex
+  justify-content: center
+  align-items: center    
