--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -536,3 +536,25 @@
   display: flex
   justify-content: center
   align-items: center    
+
+.w
+  max-width: 150% !important  
+
+.img-text 
+  position: relative
+  bottom: 7rem
+  right: 0  
+  margin: auto 
+  background: #BCD9DD
+  
+.bot
+  bottom: 10rem !important  
+
+.bgp1
+  background-color: #185181
+  border-radius: 0px 0px 20px 20px
+.bgp2
+  background-color: #33C7BE
+  border-radius: 0px 0px 20px 20px
+
+     
